# gitr

./: CMakeLists.txt  example_file.nc  file.cfg  netcdfTest.m  netcdfTest.py  netcdf_file_py.nc
src/: Field.cpp  Field.hpp  file_io.cpp  file_io.hpp  file_io_tests.cpp  main.cpp  managed.hpp
