cmake_minimum_required (VERSION 2.6)
SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_CXX_COMPILER g++)
set(CMAKE_MODULE_PATH /Users/tyounkin/Code/gitr_test_algorithms/libconfig/CMake/)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} --std=c++17 -O3") # -lstdc++fs") #-stdlib=libc++") # -lstdc++fs")
project (Tutorial C CXX)
list(APPEND CMAKE_PREFIX_PATH "/usr/local/include" "/usr/local/lib")
find_package(LibConfig REQUIRED)
IF (LIBCONFIG_FOUND)
  include_directories(${LIBCONFIGPP_INCLUDE_DIR})
  message( STATUS "LibConfig found: " ${LIBCONFIGPP_INCLUDE_DIR} )
endif()
find_package(NetCDF COMPONENTS CXX REQUIRED)
include_directories("/usr/local/include")
include_directories(${NETCDF_INCLUDE_DIRS})
find_package(MPI)
if(MPI_FOUND)
  include_directories(SYSTEM ${MPI_INCLUDE_PATH})
  message( STATUS "MPI found: " ${MPI_INCLUDE_PATH} )
endif()
#include_directories("/Users/tyounkin/anaconda2/pkgs/libcxx-4.0.1-h579ed51_0/lib/")
message( STATUS "netCDF include dir: " ${NETCDF_INCLUDE_DIRS})
message( STATUS "netcdf c lib: " ${NETCDF_C_LIBRARIES})
message( STATUS "netcdf cxx lib: " ${NETCDF_CXX_LIBRARIES})
add_definitions(-DUSE_PARALLEL -DHAS_NETCDF_PAR_H)
file( GLOB SOURCE_FILES src/file_io.cpp )
file( GLOB HEADER_FILES src/*.hpp )
add_library(YourLib ${SOURCE_FILES} ${HEADER_FILES} )
ADD_EXECUTABLE(Tutorial src/main.cpp)
ADD_EXECUTABLE(tests src/file_io_tests.cpp)

#FILE(GLOB SRCFILES src/*.cpp)
#ADD_EXECUTABLE(Tutorial ${SRCFILES})
#ADD_EXECUTABLE(tests src/file_io_tests.cpp)
#target_include_directories(Tutorial PRIVATE src)
target_link_libraries(Tutorial ${LIBCONFIGPP_LIBRARIES})
target_link_libraries(Tutorial YourLib)
target_link_libraries(tests ${LIBCONFIGPP_LIBRARIES})
target_link_libraries(tests YourLib)
target_link_libraries(Tutorial ${NETCDF_C_LIBRARIES})
target_link_libraries(Tutorial ${NETCDF_CXX_LIBRARIES})
target_link_libraries(tests ${NETCDF_C_LIBRARIES})
target_link_libraries(tests ${NETCDF_CXX_LIBRARIES})
target_link_libraries(Tutorial ${MPI_C_LIBRARIES})
target_link_libraries(Tutorial ${MPI_CXX_LIBRARIES})
target_link_libraries(tests ${MPI_C_LIBRARIES})
target_link_libraries(tests ${MPI_CXX_LIBRARIES})
